--- a/index.html
+++ b/index.html
@@ -13,28 +13,11 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center my-5">Countries</h1>
+        <h1 class="text-center my-5">Country List</h1>
         <div>
             <ul id="list"></ul>
-            <div class="row">
-                <!-- <table class="table" id="tbl">
-                    <thead class="table-dark">
-                      <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Name</th>
-                        <th scope="col">Capital</th>
-                        <th scope="col">Region</th>
-                      </tr>
-                    </thead>
-                    <tbody id="tbody">
-                      <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                      </tr>
-                    </tbody>
-                  </table> -->
+            <div class="row" id="rw">
+
             </div>
         </div>
     </div>
